apps/api/ejnmeal-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejnmeal-be
  namespace: api
  labels:
    app: ejnmeal-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ejnmeal-be
  template:
    metadata:
      labels:
        app: ejnmeal-be
    spec:
      containers:
      - name: ejnmeal-be
        image: hyeonwoo5342/ejnmeal-be:2
        imagePullPolicy: Always
        ports:
        - containerPort: 6600
      imagePullSecrets:
      - name: dockerhub-secret
