apps/api/ejnmeal-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ejnmeal-be
  namespace: api
  labels:
    app: ejnmeal-be
spec:
  type: ClusterIP
  ports:
    - port: 6600
  selector:
    app: ejnmeal-be
